--- a/angular/src/docs/asciidoc/angular-slides.adoc
+++ b/angular/src/docs/asciidoc/angular-slides.adoc
@@ -1,97 +1,99 @@
-= Example Manual
+= Single Page Applications with AngularJS
 Ivo Houbrechts <ivo.houbrechts@ixor.be>
-2014-09-09
+2015-05-04
 :revnumber: {project-version}
 :example-caption!:
 ifndef::imagesdir[:imagesdir: images]
 ifndef::sourcedir[:sourcedir: ../java]
 
-== Introduction
+== Agenda
+* Why bother?
+* Angular in a hurry
+* The toolbox
+* What's next
 
+== Why bother?
+
+== UX
+* Fat client
+* Browser
+
+=== Fat clients
 [%step]
-* This is a user manual for an example project.
-* This project does something.
-* We just haven't decided what that is yet.
-
-== Speaker Notes
-
-Press the `*s*` key to access speaker notes.
+* Fine grained interactions
+* Speed
+** < 30 milliseconds
 
 [NOTE.speaker]
 --
-You've unlocked the super secret notes area.
-Neat huh?
+* Web shop: check "delivery address same as billing address"
+* Create new address on the fly
+* TAB - type - ENTER
 --
 
-== Source Code
+=== Browser
+* Bookmarks
+* Back navigation
+* Zero install effort
 
-[source,java]
-.Java code from project
+== (Technical) Complexity
+=== Code complexity
+[%step]
+* Components
+** Composability
+** Scope isolation (locality)
+* ajax Context
+** Mirror client state
+** Build from request
+* Programming language
+* Testability
+
+[NOTE.speaker]
+--
+* Asynchronous JavaScript and XML
+--
+
+=== Operational complexity
+[%step]
+* State(less)
+** Memory usage
+* Course or fine grained request
+** Performance
+* Multiple clients
+** Web
+** Mobile
+** Server
+
+=== The JQuery solution
+<div class="field inline editable" data-required="true">Ivo<div>
+$('.editable').editable()
+->show real example of editable
+
+* Abusing style class
+* Lots of unrelated event handlers
+* Re-apply after ajax
+
+== Single Page Applications
+* One page with links to JavaScript and CSS
+* Scripts take care of:
+** user interactions
+** communication with server
+** rendering views by manipulating the DOM
+** change the URL
+
+== Angular in a hurry
+
+== DDD
+* Data Binding
+* Dependency Injection
+* Directives
+
+=== Data Binding
+. link
+[source,javascript]
 ----
-include::{sourcedir}/example/StringUtils.java[tags=contains,indent=0]
-----
-
-This page was built by the following command:
-
- $ ./gradlew asciidoctor
-
-== Source Code with callouts
-
-[source,groovy]
-.Embedded groovy code
-----
-def foo(){
-    ['a', 'b'].each{ // (1)
-        println "item is: $it" // (2)
-    }
-}
+include::{sourcedir}/01_dataBinding.html[tags=dataBinding,indent=0]
 ----
 [.colist]
-<1> Isn't this realy nice?
-<2> It is nice, but it could be better if callouts where completely supported. +
-No?
-<3> Indeed
-
-== Blank screen
-
-You can press `*b*` or `*.*` to blank your current screen.
-
-Hit it again to bring it back.
-
-== Overview
-
-Press the `*esc*` key to get an overview of your slides.
-
-== Including documents from subdir
-
-.include::subdir/_b.adoc[]
-
-include::subdir/_b.adoc[]
-
-== Images
-
-[.thumb]
-image::sunset.jpg[scaledwidth=75%]
-
-== Definition list
-foo:: bar
-
-== Attributes
-
-Press the down arrow key to see the next sub-slide.
-
-=== Attributes Part 1
-.Built-in
-asciidoctor-version:: {asciidoctor-version}
-safe-mode-name:: {safe-mode-name}
-docdir:: {docdir}
-docfile:: {docfile}
-imagesdir:: {imagesdir}
-
-=== Attributes Part 2
-.Custom
-project-version:: {project-version}
-sourcedir:: {sourcedir}
-endpoint-url:: {endpoint-url}
-
-
+<1> One-way data binding
+<2> Two-way data binding
